app/src/test/resources/programs/valid/arrays/arrayShouldNotBeDealocatedOutside.exe
foo getSimpleArr() -> [Int] = { 
    let x: [Int] = new [Int] (1); 
    x[0] = 17;
    x
}

// Should return 17
foo main() -> Int = {
    let x: [Int] = getSimpleArr();
    x[0]
}
