app/src/test/resources/programs/invalid/loops/BreakLoopOutsideOfRange.exe
foo main() -> Int = {
    loop@firstLoop {
        // Correct loop
        break 1;
    }

    loop {
        // firstLoop lable does not exists here
        break@firstLoop 1;
    }

}